# katls

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  buttons.c  buttons.h  common.c  common.h  gui.c  idf_component.yml  journal.c  journal.h  main.c  state.c  state.h  wifi.c  wifi.h
main/gui/: gui.c  gui.h
main/gui/app/: app.c  screen.c  screen.h
main/gui/screen/: base.h  input_screen.c  input_screen.h  journal_screen.c  journal_screen.h  screen.h  screens.c  screens.h  wifi_screen.c  wifi_screen.h
station/: .env.example  Dockerfile.app  Dockerfile.backup  compose.yaml  mount_instructions.txt  requirements.txt  test-client.py
station/app/: db.py  main.py  model.py  parser.py
station/app/routes/: api.py  htmx.py  pages.py
station/app/templates/htmx/: events.html  events_add_form.html
station/app/templates/pages/: home.html
station/backup/: backup.sh
station/scripts/: test-client.py
station/txtjournal/: db_to_txt_journal.py  db_txt_diff.sh  journal.txt  parser.py  txt_journal_to_db.py
